--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 1. Name your web page -->
-    <title></title>
+    <title>Portfolio</title>
 
     <!-- 7. Import Stylesheet -->
-
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
     <!-- 2. Name and Info -->
     <header>
-
+        <h1>Arya Oberoi</h1>
+        <h2>Student at university</h2>
+        <p>I am older tha  you</p>
+        <p>Location bronx NY</p>
     </header>
 
     <!-- 3. About Me -->
-    <section>
+    <section class = "about">
         <!-- 3a. The About Me Section -->
 
+        <div class = "aboutme">
+            <h2>About me</h2>
+            <p>I am Arya</p>
+        </div>
 
         <!-- 4. Add a Picture -->
         <div>
-
+            <img src = "./images/photo.png" alt ="GDSC Image" style = "width: 200px" class="mypicture"/>
+            
         </div>
     </section>
 
@@ -33,11 +41,23 @@
     <section class="projects">
         <div>
             <!-- 5a. Add project title -->
-            <h4></h4>
+            <h4><a href="https://github.com/AryaGit27/LearnAboutWebBasics.git" target = "_blank"> Portfolio Project</a></h4>
 
             <!-- 5b. Add project description -->
+            <ul>
+                <li>Learned about HTML</li>
+                <li>Learned about VS Code</li>
+            </ul>
+        </div>
+        <div>
+            <!-- 5a. Add project title -->
+            <h4><a href="https://google.com" target = "_blank">Google</a></h4>
 
-
+            <!-- 5b. Add project description -->
+            <ul>
+                <li>Added addition</li>
+                <li>Removed subtraction</li>
+            </ul>
         </div>
     </section>
 
@@ -46,7 +66,7 @@
         <h2>Connect With Me!</h2>
         <!-- 6a. Make a button -->
         <!-- 6b. Make it redirectable -->
-
+        <a href = "https://www.linkedin.com/" target = "_blank"><button>LinkedIN</button></a>
     </footer>
 </body>
 </html>
